style: update the scrollbar so all states and parts are styled correctly

--- a/data/style/default.css
+++ b/data/style/default.css
@@ -75,68 +75,88 @@ MxScrollView
   -mx-scrollbar-height: 22;
 }
 
-MxButton#backward-stepper
+MxButton.backward-stepper
 {
   border-image: none;
   -mx-content-image: url("scroll-button-left.png");
 }
 
-MxButton#backward-stepper:hover
+MxButton.backward-stepper:hover
 {
   -mx-content-image: url("scroll-button-left-hover.png") 5;
 }
 
-MxButton#backward-stepper:active
+MxButton.backward-stepper:active
 {
   -mx-content-image: url("scroll-button-left-active.png") 5;
 }
 
-MxButton#forward-stepper
+MxButton.backward-stepper:disabled
+{
+  -mx-content-image: url("scroll-button-left-disabled.png") 5;
+}
+
+MxButton.forward-stepper
 {
   border-image: none;
   -mx-content-image: url("scroll-button-right.png") 5;
 }
 
-MxButton#forward-stepper:hover
+MxButton.forward-stepper:hover
 {
   -mx-content-image: url("scroll-button-right-hover.png") 5;
 }
 
-MxButton#forward-stepper:active
+MxButton.forward-stepper:active
 {
   -mx-content-image: url("scroll-button-right-active.png") 5;
 }
 
-MxButton#up-stepper
+MxButton.forward-stepper:disabled
+{
+  -mx-content-image: url("scroll-button-right-disabled.png") 5;
+}
+
+MxButton.up-stepper
 {
   border-image: none;
   -mx-content-image: url("scroll-button-up.png") 5;
 }
 
-MxButton#up-stepper:hover
+MxButton.up-stepper:hover
 {
   -mx-content-image: url("scroll-button-up-hover.png") 5;
 }
 
-MxButton#up-stepper:active
+MxButton.up-stepper:active
 {
   -mx-content-image: url("scroll-button-up-active.png") 5;
 }
 
-MxButton#down-stepper
+MxButton.up-stepper:disabled
+{
+  -mx-content-image: url("scroll-button-up-disabled.png") 5;
+}
+
+MxButton.down-stepper
 {
   border-image: none;
   -mx-content-image: url("scroll-button-down.png") 5;
 }
 
-MxButton#down-stepper:hover
+MxButton.down-stepper:hover
 {
   -mx-content-image: url("scroll-button-down-hover.png") 5;
 }
 
-MxButton#down-stepper:active
+MxButton.down-stepper:active
 {
   -mx-content-image: url("scroll-button-down-active.png") 5;
+}
+
+MxButton.down-stepper:disabled
+{
+  -mx-content-image: url("scroll-button-down-disabled.png") 5;
 }
 
 /* scroll bars */
@@ -157,37 +177,58 @@ MxScrollBar *.vtrough
   border-image: url("scroll-vbackground.png") 5 5 7 5;
 }
 
+MxScrollBar *.htrough:disabled
+{
+  border-image: url("scroll-hbackground-disabled.png") 5 5 7 5;
+}
 
-MxScrollBar MxButton#vhandle
+MxScrollBar *.vtrough:disabled
+{
+  border-image: url("scroll-vbackground-disabled.png") 5 5 7 5;
+}
+
+
+
+MxScrollBar MxButton.vhandle
 {
   border-image: url("scroll-vhandle.png") 5;
   padding: 0;
 }
 
-MxScrollBar MxButton#vhandle:hover
+MxScrollBar MxButton.vhandle:hover
 {
   border-image: url("scroll-vhandle-hover.png") 5;
 }
 
-MxScrollBar MxButton#vhandle:active
+MxScrollBar MxButton.vhandle:active
 {
   border-image: url("scroll-vhandle-active.png") 5;
 }
 
-MxScrollBar MxButton#hhandle
+MxScrollBar MxButton.vhandle:disabled
+{
+  border-image: url("scroll-vhandle-disabled.png") 5;
+}
+
+MxScrollBar MxButton.hhandle
 {
   border-image: url("scroll-hhandle.png") 5;
   padding: 0;
 }
 
-MxScrollBar MxButton#hhandle:hover
+MxScrollBar MxButton.hhandle:hover
 {
   border-image: url("scroll-hhandle-hover.png") 5;
 }
 
-MxScrollBar MxButton#hhandle:active
+MxScrollBar MxButton.hhandle:active
 {
   border-image: url("scroll-hhandle-active.png") 5;
+}
+
+MxScrollBar MxButton.hhandle:disabled
+{
+  border-image: url("scroll-hhandle-disabled.png") 5;
 }
 
 /*
